# azerothcore-wotlk

./: CMakeLists.txt  vcpkg.json
data/sql/updates/pending_db_characters/: rev_1776220429014802085.sql
modules/: CMakeLists.txt
src/common/Collision/Management/: MMapMgr.cpp  MMapMgr.h  VMapMgr2.cpp  VMapMgr2.h  WorldModelStore.cpp  WorldModelStore.h
src/common/Collision/Maps/: MapTree.cpp
src/common/Collision/Models/: GameObjectModel.h  ModelInstance.h
src/common/Threading/: LockedQueue.h
src/server/: CMakeLists.txt
src/server/apps/: CMakeLists.txt
src/server/apps/voiceserver/: Main.cpp  voiceserver.rc
src/server/apps/worldserver/: Main.cpp  worldserver.conf.dist
src/server/game/: CMakeLists.txt
src/server/game/Grids/: GridTerrainLoader.cpp  GridTerrainLoader.h  MapGridManager.cpp
src/server/game/Groups/: Group.cpp  Group.h
src/server/game/Handlers/: ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  VoiceChatHandler.cpp
src/server/game/Maps/: Map.cpp  Map.h  MapCollisionData.cpp  MapCollisionData.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  (+2 more)
src/server/services/: CMakeLists.txt
src/server/services/voice/: VoiceServer.cpp  VoiceServer.h
src/server/services/voice/Channel/: Channel.h  ChannelMgr.cpp  ChannelMgr.h
src/server/services/voice/Network/: InternalHandler.cpp  InternalHandler.h  InternalSession.cpp  InternalSession.h  InternalSocketMgr.h
src/server/shared/: SharedDefines.h  VoiceChatSharedDefines.h
src/tools/: CMakeLists.txt
src/tools/mmaps_generator/: TerrainBuilder.cpp
(+43 files in other folders)
